fixed spacing

--- a/src/styles/profile-pic.scss
+++ b/src/styles/profile-pic.scss
@@ -4,6 +4,6 @@
         max-width: 250px;
         width: 100%;
         border-radius: 200px;
-        margin-top: 50px;
+        margin-top: 30px;
     }
 }
